{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 647,
  "lineage": "660aaaac-259d-c839-e842-8c0ef4f4ea1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0328d6ce6ba8aeccf",
            "domain": "vpc",
            "id": "eipalloc-0328d6ce6ba8aeccf",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-72-108-100.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.72.108.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:internet-gateway/igw-03404262b80d85ae9",
            "id": "igw-03404262b80d85ae9",
            "owner_id": "846035687543",
            "tags": {
              "Name": "tokyo-app1_IG",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "tokyo-app1_IG",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "dependencies": [
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tokyo-app1_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:846035687543:loadbalancer/app/tokyo-app1-load-balancer/e6d92e0ef66e9ac0",
            "arn_suffix": "app/tokyo-app1-load-balancer/e6d92e0ef66e9ac0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tokyo-app1-load-balancer-852947192.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:846035687543:loadbalancer/app/tokyo-app1-load-balancer/e6d92e0ef66e9ac0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tokyo-app1-load-balancer",
            "security_groups": [
              "sg-08b3c14f0e615adbb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-058aa5c4e43150200"
              },
              {
                "subnet_id": "subnet-071423ca051f77bc6"
              }
            ],
            "subnets": [
              "subnet-058aa5c4e43150200",
              "subnet-071423ca051f77bc6"
            ],
            "tags": {
              "Name": "tokyo-app1LoadBalancer",
              "Owner": "Darknesses",
              "Project": "Web Service",
              "Service": "tokyo-app1"
            },
            "tags_all": {
              "Name": "tokyo-app1LoadBalancer",
              "Owner": "Darknesses",
              "Project": "Web Service",
              "Service": "tokyo-app1"
            },
            "vpc_id": "vpc-00d4473df9ccb1cc0",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.tokyo-app1-lb01-sg01",
            "aws_subnet.public-ap-northeast-1a",
            "aws_subnet.public-ap-northeast-1c",
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:846035687543:listener/app/tokyo-app1-load-balancer/e6d92e0ef66e9ac0/7e65d608cb18d67e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:846035687543:targetgroup/tokyo-app1-target-group/a54841e570157188",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:846035687543:listener/app/tokyo-app1-load-balancer/e6d92e0ef66e9ac0/7e65d608cb18d67e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:846035687543:loadbalancer/app/tokyo-app1-load-balancer/e6d92e0ef66e9ac0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tokyo-app1_alb",
            "aws_lb_target_group.tokyo-app1_tg",
            "aws_security_group.tokyo-app1-lb01-sg01",
            "aws_subnet.public-ap-northeast-1a",
            "aws_subnet.public-ap-northeast-1c",
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tokyo-app1_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:846035687543:targetgroup/tokyo-app1-target-group/a54841e570157188",
            "arn_suffix": "targetgroup/tokyo-app1-target-group/a54841e570157188",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:846035687543:targetgroup/tokyo-app1-target-group/a54841e570157188",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tokyo-app1-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tokyo-app1TargetGroup",
              "Owner": "Darknesses",
              "Project": "Web Service",
              "Service": "tokyo-app1"
            },
            "tags_all": {
              "Name": "tokyo-app1TargetGroup",
              "Owner": "Darknesses",
              "Project": "Web Service",
              "Service": "tokyo-app1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "dependencies": [
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0328d6ce6ba8aeccf",
            "connectivity_type": "public",
            "id": "nat-049a7b7f881e55f4b",
            "network_interface_id": "eni-0411df86b37a9aa77",
            "private_ip": "10.35.1.122",
            "public_ip": "35.72.108.100",
            "subnet_id": "subnet-058aa5c4e43150200",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:route-table/rtb-039c87bd2ecf419b1",
            "id": "rtb-039c87bd2ecf419b1",
            "owner_id": "846035687543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-049a7b7f881e55f4b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:route-table/rtb-0884e0178642931c0",
            "id": "rtb-0884e0178642931c0",
            "owner_id": "846035687543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03404262b80d85ae9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-northeast-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d1ea5220f16b51",
            "route_table_id": "rtb-039c87bd2ecf419b1",
            "subnet_id": "subnet-0ed169ea7b6514d32"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-ap-northeast-1a",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-northeast-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de38bdcf8e5c548e",
            "route_table_id": "rtb-039c87bd2ecf419b1",
            "subnet_id": "subnet-043f2c7b13c08bfe9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-ap-northeast-1c",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ap-northeast-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005a113dec45c3a11",
            "route_table_id": "rtb-0884e0178642931c0",
            "subnet_id": "subnet-058aa5c4e43150200"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ap-northeast-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072ff38204beec2d2",
            "route_table_id": "rtb-0884e0178642931c0",
            "subnet_id": "subnet-071423ca051f77bc6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-ap-northeast-1c",
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-app1-lb01-sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:security-group/sg-08b3c14f0e615adbb",
            "description": "tokyo-app1-lb01-sg01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b3c14f0e615adbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-app1-lb01-sg01",
            "name_prefix": "",
            "owner_id": "846035687543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-app1-lb01-sg01",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "tokyo-app1-lb01-sg01",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-app1-tg01-sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:security-group/sg-0a7b10a42c4d26b5b",
            "description": "tokyo-app1-tg01-sg01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7b10a42c4d26b5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-app1-tg01-sg01",
            "name_prefix": "",
            "owner_id": "846035687543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-app1-tg01-sg01",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "tokyo-app1-tg01-sg01",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-app1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:subnet/subnet-0ed169ea7b6514d32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.35.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed169ea7b6514d32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846035687543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-ap-northeast-1a",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-ap-northeast-1a",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "dependencies": [
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:subnet/subnet-043f2c7b13c08bfe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.35.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043f2c7b13c08bfe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846035687543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-ap-northeast-1c",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-ap-northeast-1c",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "dependencies": [
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:subnet/subnet-058aa5c4e43150200",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.35.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058aa5c4e43150200",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846035687543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-ap-northeast-1a",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-ap-northeast-1a",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "dependencies": [
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:subnet/subnet-071423ca051f77bc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.35.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071423ca051f77bc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846035687543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-ap-northeast-1c",
              "Owner": "darknesses",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-ap-northeast-1c",
              "Owner": "darknesses",
              "Service": "application1"
            },
            "vpc_id": "vpc-00d4473df9ccb1cc0"
          },
          "dependencies": [
            "aws_vpc.tokyo-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:846035687543:vpc/vpc-00d4473df9ccb1cc0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.35.0.0/16",
            "default_network_acl_id": "acl-0375ad6d8574efd5d",
            "default_route_table_id": "rtb-0cd842c2912c2e0c6",
            "default_security_group_id": "sg-0daae02dda624097e",
            "dhcp_options_id": "dopt-05fde9e5cd133754f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00d4473df9ccb1cc0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd842c2912c2e0c6",
            "owner_id": "846035687543",
            "tags": {
              "Name": "tokyo-app1",
              "Owner": "Darknesses",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "tokyo-app1",
              "Owner": "Darknesses",
              "Service": "application1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}